name:                 london-calling
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               Nick B
maintainer:           nick@declension.net
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable london-calling
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5, github >= 0.14.1, time, text, vector
  hs-source-dirs:       src, app
  default-language:     Haskell2010
