name:                 london-calling
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               Nick B
maintainer:           nick@declension.net
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable london-calling
  main-is:              Main.hs
  other-modules:        Cli
  -- other-extensions:
  build-depends:        base                   >= 4.7 && < 5
                        , logging              >= 1.3.0
                        , gitlib               >= 3.1.1
                        , gitlib-libgit2       >= 3.1.1
                        , optparse-applicative >= 0.10
                        , tagged               >= 0.4.5
                        , transformers         >= 0.3.0.0
                        , time
                        , text
  hs-source-dirs:       src, app
  default-language:     Haskell2010
